plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'cloud.velo'
version = '0.0.3-SNAPSHOT'
description = 'velo-main'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // 1. Web & View (MVC와 타임리프)
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // 2. Database & JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'org.postgresql:postgresql'

    // 3. Lombok & Configuration
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    // 4. Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // 5. Login & Security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'com.google.api-client:google-api-client:2.2.0'

    // JWT 토큰 관련 라이브러리
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

    // redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // 1. 웹소켓 기능을 위한 의존성
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // 2. Docker Java API 관련 의존성
    implementation 'com.github.docker-java:docker-java-core:3.7.1'
    implementation 'com.github.docker-java:docker-java-transport-httpclient5:3.7.1'

    // 처리율 제한 알고리즘을 제공하는 bucket4j 라이브러리
    implementation 'com.bucket4j:bucket4j_jdk17-core:8.18.0'

}

tasks.named('test') {
    useJUnitPlatform()
}

jar {
    enabled = false
}
